Leverage decision-tree domain model — iteration 3